// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyResource should create property 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "create_property": {
          "status": "pending",
        },
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`PropertyResource should get property 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "get_property": null,
      },
      "errors": [
        {
          "extensions": {
            "code": "INTERNAL_SERVER_ERROR",
          },
          "locations": [
            {
              "column": 21,
              "line": 3,
            },
          ],
          "message": "Cannot return null for non-nullable field property_output.title.",
          "path": [
            "get_property",
            "title",
          ],
        },
      ],
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`PropertyResource should search properties return empty items 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "search_properties": {
          "current_page": 1,
          "items": [],
          "last_page": 0,
          "per_page": 15,
          "total": 0,
        },
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;
